src/objects/MMR_observation_form__c.object
<CustomObject>
    <fields>
        <fullName>Staff_name__c</fullName>
        <label>Staff name</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>MMR Observation Forms</relationshipLabel>
        <relationshipName>MMR_Observation_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suitability_questions_and_importance_cor__c</fullName>
        <inlineHelpText>Complete needs analysis, summarising from importance from responses</inlineHelpText>
        <label>Suitability fields correctly completed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Learning</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summarised_items_issued_to_customer__c</fullName>
        <label>Summarised items issued to customer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Learning</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_scales_and_process_outlined__c</fullName>
        <inlineHelpText>Time scales and process to completletion. - i.e. process guide</inlineHelpText>
        <label>Process guide positioned/explained?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Learning</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Told_cust_IBB_solicitor_fee_liability__c</fullName>
        <inlineHelpText>Explain IBB pay the first £400 of it&apos;s solicitor fee, customer pays excess, total charge is typically £500, will be notified if significantly different.</inlineHelpText>
        <label>Told cust IBB solicitor fee liability?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Learning</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_call_meeting_signposted_throughout__c</fullName>
        <label>Was call/meeting signposted throughout?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Learning</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_customer_treated_fairly__c</fullName>
        <inlineHelpText>E.g. Advisor was professional, showed empathy, friendly, etc.</inlineHelpText>
        <label>Was the customer treated fairly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Learning</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_line_assessment_accurate__c</fullName>
        <label>1st line assessment accurate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Learning</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_line_observation_completed__c</fullName>
        <label>1st line observation completed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Learning</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MMR Observation Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Full_obs_form__c</columns>
        <columns>NAME</columns>
        <columns>Staff_name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Observer_name__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Next_Observation_due__c</columns>
        <columns>Overall_rating__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>MMR observation form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MMR Observation Forms</pluralLabel>
    <recordTypes>
        <fullName>Advice_Check_Form</fullName>
        <active>true</active>
        <description>Advice Check Form</description>
        <label>Advice Check Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Full_Advice_Check_Form_Read_Only</fullName>
        <active>true</active>
        <label>Full Advice Check Form Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Full_File_Checks_Form</fullName>
        <active>true</active>
        <description>Full File Checks Form</description>
        <label>Full File Checks Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Full_File_Checks_Form_Read_Only</fullName>
        <active>true</active>
        <label>Full File Checks Form Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Full_Observation_form</fullName>
        <active>true</active>
        <description>MMR Full observation form</description>
        <label>Full Observation Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <label>Full Observation Form Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MMR_Observation_Form_Read_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
RecordType.Id = &quot;012D0000000QmFF&quot;, 

AND(
RecordType.Id = &quot;012D0000000QmFK&quot;, 

AND(
RecordType.Id = &quot;012D0000000QmFA&quot;,


NOT($User.ProfileId=&quot;00eD0000001QjEb&quot;), 
OR(ISCHANGED( Opportunity_Name__c ), 
ISCHANGED( Staff_name__c )) 
)))</errorConditionFormula>
        <errorMessage>You are not authorized to modify this record. Please contact your Salesforce Administrator</errorMessage>
    </validationRules>
</CustomObject>